# severostal

./: .dockerignore  123  1234  1234152  Dockerfile.app  README.md  action.yml  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.sh  start.sh  test
infra/: .env.example  app.yaml  config.yaml  database.yaml  docker-compose.app.yaml  docker-compose.database.yaml  monitoring.yaml  prometheus.yml
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 378d0338a6a1_update_relationship.py  9e310ed3eb4e_create_users_and_tasks_tables.py
src/api/: main.py
src/api/http/: __init__.py  depends.py  health_check.py  routers.py
src/api/http/auth/: handlers.py  schemas.py
src/api/http/tasks/: handlers.py  schemas.py
src/app/: __init__.py  app.py  logger.py
src/config/: __init__.py  config.py
src/database/: __init__.py  db.py  models.py  unit_of_work.py
src/entity/: tasks.py  users.py
src/metrics/: __init__.py  metrics.py
src/repositories/tasks/: __init__.py  contract.py  psqlpdb.py
src/repositories/users/: __init__.py  contract.py  dto.py  psqlpdb.py
src/services/: __init__.py  exceptions.py
src/services/tasks/: __init__.py  exceptions.py  service.py  validators.py
src/services/users/: exceptions.py  service.py  validators.py
src/utils/: jwt.py  password.py
