[project]
name = "generator-tests"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "openai",
    "pydantic",
    "pydantic-settings",
    "jinja2",
    "tiktoken",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
]

[project.scripts]
generator-tests = "src.app.app:main_sync"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
